--- a/calc.css
+++ b/calc.css
@@ -21,10 +21,16 @@ body{
 }
 
 .display{
+    box-sizing: border-box;
     height: 15%;
     background-color: white;
     border-radius: 10px;
     margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-size: 35px;
+    padding: 10px;
 }
 
 .operate{
@@ -34,28 +40,20 @@ body{
     padding-left: 15px;
     padding-right: 15px;
     border-radius: 5px;
-    color: whitesmoke;
-    font-size: 25px;
     display: flex;
     gap: 15px;
 }
 
-.clear{
+.operate button{
+    color: whitesmoke;
+    font-size: 25px;
     background-color: rgba(0, 0, 0, 1);
     border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1;
-}
-
-.equals{
-    background-color: rgba(0, 0, 0, 1);
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
+    border-color: lightgreen;
 }
 
 .content{
@@ -73,20 +71,54 @@ body{
     width: 75%;
 }
 
-.numbers div{
+.numbers .div1{
     height:22%;
     margin-bottom: 10px;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     display: flex;
+    gap: 5px;
 }
 
+.div1 button{
+    flex:1;
+    background-color: rgba(0, 0, 0, 1);
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    transition: 0.05s all;
+}
 
+.div1 button:active{
+    transform: scale(0.94);
+}
 
 .operators{
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     box-sizing: border-box;
     margin-right: 12px;
     width: 25%;
+    display: flex;
+    flex-direction: column;
+}
+
+.operators button{
+    background-color: rgba(0, 0, 0, 1);
+    flex: 1;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    margin-bottom: 10px;
+    transition: 0.05s all;
+    border-color: lightblue;
+}
+
+.operators button:active{
+    transform: scale(0.94);
 }
